# AI-And-ML-Learning

./: .gitignore  MNIST_NN.ipynb
AI Agents/lang-graph-agent/: main.py  pyproject.toml
AI Agents/langgraph-agents/drafter-agent/: Unable_to_Attend_Meeting_Email.txt  agent_state.py  agent_tools.py  drafter_agent.py  main.py  pyproject.toml
AI Agents/langgraph-agents/memory-agent/: conversation_history.txt  main.py  pyproject.toml
AI Agents/langgraph-agents/rag-agent/: pyproject.toml
AI Agents/langgraph-agents/rag-agent/rag-agent/: main.py
AI Agents/langgraph-agents/rag-agent/rag-agent/agent/: pdf_loader.py  (+4 more)
AI Agents/langgraph-agents/react-agent/: main.py  pyproject.toml
AI Agents/ollama-local-agent/: README.md  main.py  pyproject.toml
AI Agents/ollama-local-agent/app/: pizza_assistant.py  pizza_assistant_cli.py  vector.py
AI Agents/simple-agent/: main.py  pyproject.toml
MCP Servers/mcp-llm-demo/: main.py  pyproject.toml
MCP Servers/mcp-llm-demo/app/domain/exceptions/: exceptions.py
MCP Servers/mcp-llm-demo/app/domain/interfaces/: document_processor.py  embedding_provider.py  knowledge_base.py  mcp_tool_handler.py  search_engine.py  text_chunker.py
MCP Servers/mcp-llm-demo/app/domain/models/: chunking_config.py  document_info.py  embedding_config.py  processing_status.py  search_query.py  search_result.py  server_config.py  text_chunk.py  tool_call_request.py  tool_call_response.py
MCP Servers/mcp-llm-demo/app/infrastructure/implementations/: embedding_provider.py  pdf_processor.py  text_chunker.py
MCP Servers/mcp-server-demo/: main.py  notes.txt
