[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-llm-demo"
version = "1.0.0"
description = "MCP server for PDF knowledge base with semantic search capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "mcp>=1.0.0",
    "PyPDF2>=3.0.0",
    "PyMuPDF>=1.23.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "typing-extensions>=4.8.0",
]
requires-python = ">=3.13""
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
mcp-pdf-server = "mcp_pdf_server.main:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true